// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoAiOpsLicense should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="sc-ksZaOG gLzhIV"
  >
    <div
      class="styledComponents__NoDataWrapper-sc-m7jeli-0 bZEmQl"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 izicZw"
      >
        <div
          class="ant-space-item"
        >
          <div
            class="ant-empty ant-empty-normal"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                class="ant-empty-img-simple"
                height="41"
                viewBox="0 0 64 41"
                width="64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  transform="translate(0 1)"
                >
                  <ellipse
                    class="ant-empty-img-simple-ellipse"
                    cx="32"
                    cy="33"
                    rx="32"
                    ry="7"
                  />
                  <g
                    class="ant-empty-img-simple-g"
                    fill-rule="nonzero"
                  >
                    <path
                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                    />
                    <path
                      class="ant-empty-img-simple-path"
                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              No Data
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 izicZw cMdQDn"
      >
        <div
          class="ant-space-item"
        >
          RUCKUS AI cannot analyze your zone(s) due to inadequate licenses. Please ensure you have licenses fully applied for zone(s) for AI Operations optimizations.
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-btn-block styledComponents__Button-sc-zk1lj8-0 kBDiup"
      type="button"
    >
      <span>
        Update My Licenses
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`OptimalConfiguration should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bZEmQl"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 izicZw"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__GreenTickIcon-sc-m7jeli-3 jzWEPO"
          data-testid="CheckMarkCircleSolid"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 izicZw cMdQDn"
    >
      <div
        class="ant-space-item"
      >
        Your network is already running in an optimal configuration and we don’t have any AI Operations to recommend currently.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptimalConfigurationWithData should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="sc-breuTD eZedhz"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 izicZw"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__GreenTickIcon-sc-m7jeli-3 jzWEPO"
          data-testid="CheckMarkCircleSolid"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 izicZw cMdQDn"
    >
      <div
        class="ant-space-item"
      >
        Your network is already running in an optimal configuration and we don’t have any AI Operations to recommend currently.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
